[project]
name = "voyager"
version = "1.17.0"
description = "Package manager for C/C++ software"
readme = "Readme.md"
requires-python = "==3.10.*"
dependencies = [
    "click==8.1.7",
    "dohq-artifactory==0.10.1",
    "jsonschema==4.23.0",
    "node-semver==0.7.0",
    "voyager-plugin-list",
]

[project.scripts]
voyager = "voyager:voyager.main"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.10.0",
]

[tool.uv.sources]
voyager-plugin-list = { path = "plugins/voyager_listplugins" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
